Cacti CHANGELOG
-bug#0000933: Change output to 24 hr
-bug#0001024: Can't create two devices via CLI with the same IP-Address
-bug#0001085: LDAP enabled status not maintained on upgrade from 0.8.6j to 0.8.7
-bug#0001100: spine hangs on unreachable hosts
-bug#0001105: add_graphs.php --list-snmp-values for all available host snmp-fields
-bug#0001125: XML parse error on template import with degree symbol
-bug#0001147: Cactid doesn't trim white space from data template OIDs
-bug#0001159: Template names are confusing/archaic (Graph, Data Templates, Data Queries are renamed).
-bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
-bug#0001182: Subdirectories are not secure and allow browsing
-bug#0001196: SNMP string with nonstandard characters breaks some Data Queries
-bug#0001209: Content-type incorrect for the SVG graphs (Graph Management still does not display SVG, but rest does)
-bug#0001279: php warning when installing specific plugins (if no "keys" were defined for a plugin table)
-bug#0001306: Empty COMMENT + <HR> gives you a blank legend line (was: Add Blank Line to Graph via Pull down menu)
-bug#0001311: Access denied for graph-only users when accessing index.php
-bug#0001319: when adding a host using cli add_device that already exist in the database, both descriptions are updated
-bug#0001333: Lack of scheme indexes
-bug#0001335: <oid_index_parse> does not work as expected; requires changes to XML for e.g. EMC Cellera
-bug#0001349: Graphs with Multiple Data Template Items don't show all required non-templated fields
-bug#0001354: 0.8.7c to 0.8.8 update script bugs
-bug#0001359: Better error checking in rrd.php
-bug#0001366: Exported data templates do not import the special characters properly
-bug#0001397: Never use "Delete" as default action in any drop-list in cacti to avoid disaster
-bug#0001414: COMMENT field can cause rrdtool to report "Legend too long"